feat(user): Added controller, model, swagger output, swagger autogen for the user endpoit
